# Morpho

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt  premake5.lua
Morpho/: Application.cpp  Application.hpp  CMakeLists.txt  Morpho.cpp  Morpho.h  application.cpp  application.hpp  applicaton.cpp  applicaton.hpp  morpho.cpp
Morpho/assets/shaders/: triangle.vert
Morpho/common/: draw_stream.cpp  draw_stream.hpp  frame_pool.hpp  generational_arena.hpp  hash_utils.hpp  resource_cache.hpp  span.hpp  utils.hpp
Morpho/vulkan/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  context.cpp  context.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  limits.cpp  limits.hpp  pipeline.cpp  pipeline.hpp  pipeline_info.cpp  pipeline_info.hpp  pipeline_layout.cpp  pipeline_layout.hpp  pipeline_state.cpp  pipeline_state.hpp  render_pass.cpp  render_pass.hpp  render_pass_info.cpp  render_pass_info.hpp  render_pass_layout.cpp  render_pass_layout.hpp  resource_binding.cpp  resource_binding.hpp  resource_manager.cpp  resource_manager.hpp  resource_set.cpp  resource_set.hpp  (+9 more)
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: compile.ps1  depth_map.vert  full_screen_triangle.vert  globals.h  gltf_depth_pass.vert  gltf_directional_light.frag  gltf_directional_light.vert  gltf_point_light.frag  gltf_point_light.vert  gltf_spot_light.frag  gltf_spot_light.vert  no_light.frag  no_light.vert  pbr.h  shadow_map_spot_light.frag  triangle.frag  triangle.vert  z_prepass.vert
Sandbox/src/: application.cpp  application.hpp  camera.cpp  camera.hpp  main.cpp  math.cpp  math.hpp
Sandbox/src/input/: input.cpp  input.hpp  key.hpp
Sandbox/src/rendering_utils/: allocators.cpp  allocators.hpp
